    disk, not the last one across all disks (mga#15589)
  o suggest up to 20GB/20% of the windows partition (whichever is larger),
    previously 6GB/10% (mga#15589)
- ugtk2, ugtk3, harddrake2:
  o do not "restore" mouse cursor on the root window, we haven't set it to
    'wait' since 2005 and this causes a crash if we don't own it (mga#15729).

Version 16.85 - 15 April 2015

- reuse ESP with "use free space" in live (mga#15690)

Version 16.84 - 14 April 2015

- drakboot:
  o fix kernel booting in blind mode (mga#15291)

Version 16.82 - 13 April 2015

- diskdrake:
  o detect Lenovo recovery & 'SYSTEM_DRV' as such (mga#1371)
  o do add a ESP if it was removed by "Clear All"
  o ignore ESP for "use free space on MS"
- drakboot:
  o default to GRUB_DISABLE_RECOVERY=falss for 'failsafe' entry (mga#15675)

Version 16.81 - 12 April 2015

- dont force 'p' for dmraid partitions,  it's conditional depending
  on device naming like dmraid, kpartx and kernel handles it
- diskdrake:
  o don't guess a drive letter for ESP partitions

Version 16.80 - 9 April 2015

- diskdrake:
  o don't guess a drive letter for recovery partitions (mga15636)
- drakboot:
  o check there's still some place on /boot with grub2 too
  o fix detecting grub2 on UEFI

Version 16.79 - 7 April 2015

- drakboot:
  o keep vga= parameter when switching to grub2 (mga#9888)

Version 16.78 - 7 April 2015

- drakboot:
  o fix installing grub2 on MBR (mga#15640)
    (regression introduced in 16.76)

Version 16.77 - 7 April 2015

- bootloader:
  o add 'noiswmd' to kernel command line to manage isw_ bios
    fakeraids with dmraid for now (instead of mdadm) (mga#11289, mga#14330)
  o allow btrfs for / without separate /boot with grub2 (mga#15374)
- partitioning wizard:
  o do not offer to select RAID as it result in a crash (mga#5800)

Version 16.76 - 3 April 2015

- drakboot:
  o log grub2-install failures (mga#15439)
- diskdrake:
  o really try to detect recovery partitions on GPT

Version 16.75 - 30 March 2015
