@@ -3,6 +3,7 @@
     disk, not the last one across all disks (mga#15589)
   o suggest up to 20GB/20% of the windows partition (whichever is larger),
     previously 6GB/10% (mga#15589)
+- speed up reading of flags from GPT partition table (mga#15621).
 
 Version 16.84 - 14 April 2015
 
