@@ -6,6 +6,7 @@
 - ugtk2, ugtk3, harddrake2:
   o do not "restore" mouse cursor on the root window, we haven't set it to
     'wait' since 2005 and this causes a crash if we don't own it (mga#15729).
+- speed up reading of flags from GPT partition table (mga#15621).
 
 Version 16.85 - 15 April 2015
 
